# dunebot

./: .env.example  .env.secrets.example  .gitignore  GIT-ROADMAP.md  README.md  discord.md  pyproject.toml  requirements.txt
bot/: __init__.py  client.py  config.py
bot/commands/: __init__.py  dune_queries.py
bot/formatters/: __init__.py  discord_embeds.py
bot/services/: __init__.py  dune_client.py  scheduler.py
bot/utils/: __init__.py  logging.py
config/: dune_queries.yaml  logging.yaml
scripts/: __init__.py  run_bot.py
tests/: __init__.py  test_config.py  test_dune_client.py  test_formatters.py  test_logging.py  test_scheduler.py
